# chumchon

./: .gitignore  App.tsx  Chumchon log d910d0d732ae.txt  LICENSE  README.md  app.json  babel.config.js  eas.json  eslint.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
android/: gradle.properties  settings.gradle
assets/: Background sparkles.lottie  Checkmark.lottie  Loader.lottie  Wallet.lottie
chumchon_program/: .gitignore  cargo.toml  (+5 more)
chumchon_program/programs/chumchon/: Cargo.toml
chumchon_program/programs/chumchon/src/: error.rs  lib.rs
chumchon_program/programs/chumchon/src/instructions/: accept_escrow.rs  complete_escrow.rs  complete_tutorial.rs  create_escrow.rs  create_group.rs  create_invite.rs  create_meme_challenge.rs  create_user_profile.rs  end_meme_challenge.rs  join_group.rs  mod.rs  send_message.rs  set_profile_nft.rs  submit_meme.rs  tip_message.rs  update_user_profile.rs  use_invite.rs  vote_for_meme.rs
chumchon_program/programs/chumchon/src/state/: escrow.rs  group.rs  group_member.rs  invite.rs  meme_challenge.rs  meme_submission.rs  message.rs  mod.rs  user_profile.rs  voter_record.rs
chumchon_program/programs/chumchon/tests/common/: mod.rs
chumchon_program/programs/chumchon/tests_backup/: accept_escrow.rs  complete_escrow.rs  complete_tutorial.rs  create_escrow.rs  create_group.rs  create_invite.rs  create_meme_challenge.rs  create_user_profile.rs  end_meme_challenge.rs  join_group.rs  send_message.rs  set_profile_nft.rs  submit_meme.rs  tip_message.rs  update_user_profile.rs  use_invite.rs  vote_for_meme.rs
(+143 files in other folders)
